Upload how it looks like 2025-03-22

--- a/eucw.org/news.html
+++ b/eucw.org/news.html
@@ -3,8 +3,12 @@
 <BR CLEAR=LEFT>
 <H1>News and Changes</H1>
 <P>
-2024-11-09 November <a href="sl2411.txt"> Text </a> and <a href="sl2411.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
-2024-10-09 October <a href="sl2410.txt"> Text </a> and <a href="sl2410.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
+2025-03-10 February <a href="sl2502.txt"> Text </a> and <a href="sl2502.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
+2025-02-09 January <a href="sl2501.txt"> Text </a> and <a href="sl2501.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
+2025-01-19 New <a href="qtc251.txt">Bulletin</a> 2025Q1 from our chairman.<p>
+2025-01-09 2nd half year 2024<a href="sl2412.txt"> Text </a> and <a href="sl2412.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
+2024-12-09 November <a href="sl2411.txt"> Text </a> and <a href="sl2411.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
+2024-11-09 October <a href="sl2410.txt"> Text </a> and <a href="sl2410.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
 2024-10-10 Current <a href="qtc244.txt">EUCW Bulletin</a> available.<p>
 2024-10-09 September <a href="sl2409.txt"> Text </a> and <a href="sl2409.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
 2024-09-09 August <a href="sl2408.txt"> Text </a> and <a href="sl2408.png"> Map </a>results of Snakes and Ladders.<p>
@@ -16,197 +20,7 @@
 2024-03-31 Swedish translation of the QRS Week rules available. Tnx SM5OUU.<p>
 2024-03-10 February <a href="sl2402.txt"> Text </a> and <a href="sl2402.png"> Map </a>results of Snakes and Ladders.<p>
 2024-02-09 January <a href="sl2401.txt"> Text </a> and <a href="sl2401.png"> Map </a>results of Snakes and Ladders.<p>
-2023-11-08 November <a href="sl2311.txt"> Text </a> and <a href="sl2311.png"> Map </a>results of Snakes and Ladders.<p>
 2024-01-09 2023/II <a href="sl2312.txt"> Text </a> and <a href="sl2312.png"> Map </a>results of Snakes and Ladders.<p>
-2023-11-08 November <a href="sl2311.txt"> Text </a> and <a href="sl2311.png"> Map </a>results of Snakes and Ladders.<p>
-2023-10-11 October <a href="sl2310.txt"> Text </a> and <a href="sl2310.png"> Map </a>results of Snakes and Ladders.<p>
-2023-10-09 September <a href="sl2309.txt"> Text </a> and <a href="sl2309.png"> Map </a>results of Snakes and Ladders. Welcome to the new ECMs from VHSC and SHSC/VHSC.<p>
-2023-10-05 New <a href="qtc234.txt"> EUCW Bulletin </a> available.<p>
-2023-09-09 August <a href="sl2308.txt"> Text </a> and <a href="sl2308.png"> Map </a>results of Snakes and Ladders.<p>
-2023-08-09 July <a href="sl2307.txt"> Text </a> and <a href="sl2307.png"> Map </a>results of Snakes and Ladders.<p>
-2023-07-12 June <a href="sl2306.txt"> Text </a> and <a href="sl2306.png"> Map </a>results of Snakes and Ladders.<p>
-2023-06-09 May <a href="sl2305.txt"> Text </a> and <a href="sl2305.png"> Map </a>results of Snakes and Ladders.<p>
-2023-06-01 <a href="euqrs23.html">QRS-W results 2023</a> available.<p>
-2023-05-08 April <a href="sl2304.txt"> Text </a> and <a href="sl2304.png"> Map </a>results of Snakes and Ladders.<p>
-2023-04-10 March <a href="sl2303.txt"> Text </a> and <a href="sl2303.png"> Map </a>results of Snakes and Ladders.<p>
-2023-04-10 New <a href="qtc232.txt"> EuCW Bulletin.</a><p>
-2023-03-15 February <a href="sl2302.txt"> Text </a> and <a href="sl2302.png"> Map </a>results of Snakes and Ladders.<p>
-2023-02-08 January <a href="sl2301.txt"> Text </a> and <a href="sl2301.png"> Map </a>results of Snakes and Ladders.<p>
-2023-01-09: Semester II <a href="sl2212.txt"> Text </a> and <a href="sl2212.png"> Map </a>results of Snakes and Ladders.<p>
-2022-12-09: November <a href="sl2211.txt"> Text </a> and <a href="sl2211.png"> Map </a>results of Snakes and Ladders.<p>
-2022-11-09: October <a href="sl2210.txt"> Text </a> and <a href="sl2210.png"> Map </a>results of Snakes and Ladders.<p>
-2022-10-08: September <a href="sl2209.txt"> Text </a> and <a href="sl2209.png"> Map </a>results of Snakes and Ladders.<p>
-2022-09-09: August <a href="sl2208.txt"> Text </a> and <a href="sl2208.png"> Map </a>results of Snakes and Ladders.<p>
-2022-08-09: July <a href="sl2207.txt"> Text </a> and <a href="sl2207.png"> Map </a>results of Snakes and Ladders.<p>
-2022-07-09: <a href="euqrs22.html">Results</a> of the 2022 EUCW/AGCW QRS Week.<p> 
-2022-06-10: June <a href="sl2206.txt"> Text </a> and <a href="sl2206.png"> Map </a>results of Snakes and Ladders.<p>
-2022-06-02: <a href="euqrs22.html">Results</a> of the 2022 EUCW/AGCW QRS Week.<p> 
-2022-06-10: May <a href="sl2205.txt"> Text </a> and <a href="sl2205.png"> Map </a>results of Snakes and Ladders.<p>
-2022-06-02: <a href="euqrs22.html">Results</a> of the 2022 EUCW/AGCW QRS Week.<p> 
-2022-05-08: April <a href="sl2204.txt"> Text </a> and <a href="sl2204.png"> Map </a>results of Snakes and Ladders.<p>
-2022-04-12: March <a href="sl2203.txt"> Text </a> and <a href="sl2203.png"> Map </a>results of Snakes and Ladders.<p>
-2022-03-09: February <a href="sl2202.txt"> Text </a> and <a href="sl2202.png"> Map </a>results of Snakes and Ladders.<p>
-2022-02-08: January <a href="sl2201.txt"> Text </a> and <a href="sl2201.png"> Map </a>results of Snakes and Ladders.<p>
-2022-01-08: December (Semester 2021-II) <a href="sl2112.txt"> Text </a> and <a href="sl2112.png"> Map </a>results of Snakes and Ladders.<p>
-2021-12-08: November <a href="sl2111.txt"> Text </a> and <a href="sl2111.png"> Map </a>results of Snakes and Ladders.<p>
-2021-12-07: New <a href="qtc215.txt"> EuCW Bulletin.</a><p>
-2021-11-09: October <a href="sl2110.txt"> Text </a> and <a href="sl2110.png"> Map </a>results of Snakes and Ladders.<p>
-2021-10-27: New <a href="qtc214.txt"> EuCW Bulletin.</a><p>
-2021-10-09: September <a href="sl2109.txt"> Text </a> and <a href="sl2109.png"> Map </a>results of Snakes and Ladders.<p>
-2021-09-08: Czech <a href="cz-euqrs.html"> Text </a> for the QRS Rules available.</p>
-2021-09-08: August <a href="sl2108.txt"> Text </a> and <a href="sl2108.png"> Map </a>results of Snakes and Ladders.<p>
-2021-08-08: July <a href="sl2107.txt"> Text </a> and <a href="sl2107.png"> Map </a>results of Snakes and Ladders.<p>
-2021-07-10: Semester I <a href="sl2106.txt"> Text </a> and <a href="sl2106.png"> Map </a>results of Snakes and Ladders.<p>
-2021-06-05: <a href="euqrs21.html">Results</a> of the 2021 EUCW/AGCW QRS Week.<P>
-2021-06-10: May <a href="sl2105.txt"> Text </a> and <a href="sl2105.png"> Map </a>results of Snakes and Ladders.<p>
-2021-05-08: Apr. <a href="sl2104.txt"> Text </a> and <a href="sl2104.png"> Map </a>results of Snakes and Ladders.<p>
-2021-04-08: Mar. <a href="sl2103.txt"> Text </a> and <a href="sl2103.png"> Map </a>results of Snakes and Ladders.<p>
-2021-03-15: <a href="ntc.html">NTC</a> is EUCW candidate.<p>
-2021-03-09: Feb. <a href="sl2102.txt"> Text </a> and <a href="sl2102.png"> Map </a>results of Snakes and Ladders.<p>
-2021-02-09: January <a href="sl2101.txt"> Text </a> and <a href="sl2101.png"> Map </a>results of Snakes and Ladders.<p>
-2021-02-09: January <a href="sl2101.txt"> Text </a> and <a href="sl2101.png"> Map </a>results of Snakes and Ladders.<p>
-2021-02-05: <a href="qtc211.txt">QTC</a> Bulletin 2021/1<P>
-2021-01-09: Dec. <a href="sl2012.txt">Text</a> and <a href="sl2012.png"> MAP</a> results of Snakes and Ladders. Final Results 2020-II.<P>
-2020-12-17: <a href="qtc202.txt">QTC</a> Bulletin 2020/2<P>
-2020-12-08: November <a href="sl2011.txt">Text</a> and <a href="sl2011.png"> MAP</a> results of Snakes and Ladders.<P>
-2020-11-07: October <a href="sl2010.txt">Text</a> and <a href="sl2010.png"> MAP</a> results of Snakes and Ladders.<P>
-2020-10-10: September <a href="sl2009.txt">Text</a> and <a href="sl2009.png"> MAP</a> results of Snakes and Ladders.<P>
-2020-10-01: New ECM UFT: F6EEQ, G&eacute;rard.<P>
-2020-09-09: August <a href="sl2008.txt">Text</a> and <a href="sl2008.png"> MAP</a> results of Snakes and Ladders.<P>
-2020-08-09: July <a href="sl2007.txt">Text</a> and <a href="sl2007.png"> MAP</a> results of Snakes and Ladders.<P>
-2020-07-10: Semester 1 and June <a href="sl2006.txt">Text</a> and <a href="sl2006.png"> MAP</a> results of Snakes and Ladders.<P>
-2020-06-12: May <a href="sl2005.txt">Text</a> and <a href="sl2005.png"> MAP</a> results of Snakes and Ladders.<P>
-2020-06-05: <a href="euqrs20.html">Results</a> of the 2020 EUCW/AGCW QRS Week.<P>
-2020-05-09: Apr. <a href="sl2004.txt">Text</a> and <a href="sl2004.png"> MAP</a> results of Snakes and Ladders.<P>
-2020-04-08: Mar. <a href="sl2003.txt">Text</a> and <a href="sl2003.png"> MAP</a> results of Snakes and Ladders.<P>
-2020-03-10: INORC appoints IK7LSE Nicolo' as new ECM.<P>
-2020-03-08: Feb. <a href="sl2002.txt">Text</a> and <a href="sl2002.png"> MAP</a> results of Snakes and Ladders.<P>
-2020-02-28: New ECM SHSC/EHSC is Olaf, DL1OP<P>
-2020-02-08: Jan. <a href="sl2001.txt">Text</a> and <a href="sl2001.png"> MAP</a> results of Snakes and Ladders.<P>
-2020-01-19: Dez. <a href="sl1912.txt">Text</a> and <a href="sl1912.png"> MAP</a> results of Snakes and Ladders. Final Results 2019-II.<P>
-2019-12-08: Nov. <a href="sl1911.txt">Text</a> and <a href="sl1911.png"> MAP</a> results of Snakes and Ladders.<P>
-2019-12-01: New Associate Member of EUCW: <a href="licw.html">Long Island CW Club</a> from the U.S.A.<P>
-2019-11-09: Oct. <a href="sl1910.txt">Text</a> and <a href="sl1910.png"> MAP</a> results of Snakes and Ladders.<P>
-2019-10-09: Sept. <a href="sl1909.txt">Text</a> and <a href="sl1909.png"> MAP</a> results of Snakes and Ladders.<P>
-2019-10-09: New <a href="qtc.html">EUCW Bulletin</a> archive created.<P>
-2019-09-09: August <a href="sl1908.txt">Text</a> and <a href="sl1908.png"> MAP</a> results of Snakes and Ladders.<P>
-2019-08-20: Graphic <a href="slwhere.png">Results </a> of the seven S+L semesters<P>
-2019-08-20: Graphic <a href="slwhere.png">Results </a> of the seven S+L semesters<P>
-2019-07-24: Essex CW ARC <a href="essexad.html">Bootcamp and Convention 19th October 2019 </a><P>
-2019-08-08: July <a href="sl1907.txt">Text</a> and <a href="sl1907.png"> MAP</a> results of Snakes and Ladders.<P>
-2019-06-01: <a href="euqrs19.html">Results</a> of the EUCW/AGCW QRS Week 2019<P>
-2019-06-08: May <a href="sl1905.txt">Text</a> and <a href="sl1905.png"> MAP</a> results of Snakes and Ladders.<P>
-2019-06-01: <a href="euqrs19.html">Results</a> of the EUCW/AGCW QRS Week 2019<P>
-2019-05-11: <a href="iz2fme/index.html">IZ2FME</a> elected as EUCW chairman from  1/9/2019 to 30/9/2022. Congrats to Michele.<P>  
-2019-05-10: April <a href="sl1904.txt">Text</a> and <a href="sl1904.png"> MAP</a> results of Snakes and Ladders.<P>
-2019-04-08: March <a href="sl1903.txt">Text</a> and <a href="sl1903.png"> MAP</a> results of Snakes and Ladders.<P>
-2019-03-08: February <a href="sl1902.txt">Text</a> and <a href="sl1902.png"> MAP</a> results of Snakes and Ladders.<P>
-2019-02-08: January <a href="sl1901.txt">Text</a> and <a href="sl1901.png"> MAP</a> results of Snakes and Ladders.<P>
-2019-01-09: Semester 2 and December <a href="sl1812.txt">Text</a> and <a href="sl1812.png"> MAP</a> results of Snakes and Ladders.<P>
-2018-12-10: November <a href="sl1811.txt">Text</a> and <a href="sl1811.png"> MAP</a> results of Snakes and Ladders.<P>
-2018-11-08: Oktober <a href="sl1810.txt">Text</a> and <a href="sl1810.png"> MAP</a> results of Snakes and Ladders.<P>
-2018-10-10: September <a href="sl1809.txt">Text</a> and <a href="sl1809.png"> MAP</a> results of Snakes and Ladders.<P>
-2018-09-13: August <a href="sl1808.txt">Text</a> and <a href="sl1808.png"> MAP</a> results of Snakes and Ladders.<P>
-2018-08-13: August <a href="sl1807.txt">Text</a> and <a href="sl1807.png"> MAP</a> results of Snakes and Ladders.<P>
-2018-07-11: Semester 1 and June <a href="sl1806.txt">Text</a> and <a href="sl1806.png"> MAP</a> results of Snakes and Ladders.<P>
-2018-06-09: May <a href="sl1805.txt">Text</a> and <a href="sl1805.png"> MAP</a> results of Snakes and Ladders.<P>
-2018-05-09: April <a href="sl1804.txt">Text</a> and <a href="sl1804.png"> MAP</a> results of Snakes and Ladders.<P>
-2018-04-08: March <a href="sl1803.txt">Text</a> and <a href="sl1803.png"> MAP</a> results of Snakes and Ladders.<P>
-2018-03-10: February <a href="sl1802.txt">Text</a> and <a href="sl1802.png"> MAP</a> results of Snakes and Ladders.<P>
-2018-02-10: January <a href="sl1801.txt">Text</a> and <a href="sl1801.png"> MAP</a> results of Snakes and Ladders.<P>
-2018-01-09: December <a href="sl1712.txt">Text</a> and <a href="sl1712.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2017-11-09: November <a href="sl1711.txt">Text</a> and <a href="sl1711.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2017-11-10: October <a href="sl1710.txt">Text</a> and <a href="sl1710.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2017-10-08: September <a href="sl1709.txt">Text</a> and <a href="sl1709.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2017-09-10: August <a href="sl1708.txt">Text</a> and <a href="sl1708.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2017-07-09: SL2017/I and June <a href="sl1706.txt">Text</a> and <a href="sl1706.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2017-06-12: May <a href="sl1705.txt">Text</a> and <a href="sl1705.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2017-06-07: <a href="euqrs17.html">QRS Week Results 2017</a>
-<P>
-2017-05-12: <a href="b/2017-3.html">New EUCW Bulletin 2017/3</a>
-<P>
-2017-05-09: April <a href="sl1704.txt">Text</a> and <a href="sl1704.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2017-04-18: <a href="it-euqrs.html">Italian</a> translation of the QRS Week rules made available by I5SKK.
-<P>
-2017-04-09: March <a href="sl1703.txt">Text</a> and <a href="sl1703.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2017-03-09: February <a href="sl1702.txt">Text</a> and <a href="sl1702.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2017-02-10: January <a href="sl1701.txt">Text</a> and <a href="sl1701.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2017-01-08: December <a href="sl1612.txt">Text</a> and <a href="sl1612.png"> MAP</a> results of Snakes and Ladders. This is also the final result for edition 2016 2nd semester.
-<P>
-2016-12-09: November <a href="sl1611.txt">Text</a> and <a href="sl1611.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2016-11-10: October <a href="sl1610.txt">Text</a> and <a href="sl1610.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2016-10-09: September <a href="sl1609.txt">Text</a> and <a href="sl1609.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2016-09-09: August <a href="sl1608.txt">Text</a> and <a href="sl1608.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2016-09-01: EuCW has a NEW CHAIRMAN: I5SKK Alessandro c/o INORC.
-<P>
-2016-08-09: July <a href="sl1607.txt">Text</a> and <a href="sl1607.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2016-07-12 June <a href="sl1606.txt">Text</a> and <a href="sl1606.png"> MAP</a> results of Snakes and Ladders. These are also the FINAL RESULTS for the 1st semester of 2016.
-<P>
-2016-06-09: May <a href="sl1605.txt">Text</a> and <a href="sl1605.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2016-06-08: IZ0WIT supplied an <a href="itsl3.html">Italian</a> translation of Snakes and Ladders. Thanks.
-<P>
-2016-06-01: QRS Week 2016 results are <a href="euqrs16.html">out</a>.
-<P>
-2016-05-10: April <a href="sl1604.txt">Text</a> and <a href="sl1604.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2016-05-04: SV2BBK supplied a <a href="grsl3.html">Greek</a> translation of Snakes and Ladders. Thanks.
-<P>
-2016-04-10: March <a href="sl1603.txt">Text</a> and <a href="sl1603.png"> MAP</a> results of Snakes and Ladders.
-<P>
-2016-03-28: HA3NU supplied a <a href="hu-euqrs.html">Hungarian</a> translation of the EuCW QRS Week. Thanks Lacy.
-<P>
-2016-03-10: February <a href="sl1602.txt">Text</a> and <a href="sl1602.png"> MAP</a>  results of Snakes and Ladders.
-<P>
-2016-02-10: January <a href="sl1601.txt">Text</a> and <a href="sl1601.png"> MAP</a>  results of Snakes and Ladders.
-<P>
-2016-01-12: Snakes and Ladders: <a href="sl15.txt">Final</a> Results of 2015 Snakes and Ladders V.2.
-<P>
-2016-01-02: Snakes and Ladders: <a href="essl3.html">Spanish</a> translation of Snakes and Ladders done by EA5EF. Thanks.
-<P>
-2015-12-12: Snakes and Ladders: <a href="czsl3.html">Czech</a> translation of Snakes and Ladders done by OK2BMA. Thanks.
-<P>
-2015-12-09: November  <a href="sl1511.txt">Text</a> and <a href="sl1511.png"> MAP</a>  results of Snakes and Ladders.<P>
-<P>
-2015-12-08: Snakes and Ladders: <a href="rusl3.html">Russian</a> translation of Snakes and Ladders done by RN3ANT. Thanks.
-<P>
-2015-11-08: October  <a href="sl1510.txt">Text</a> and <a href="sl1510.png"> MAP</a>  results of Snakes and Ladders.<P>
-<P>
-2015-10-24: DK5KE donated band plan graphics. Thanks to him and SWL Sandra for animating the gif and creating the SL graphics.
-<P> 
-2015-10-14: Snakes and Ladders: <a href="plsl3.html">Polish</a> translation of Snakes and Ladders done by SP3RNZ. Thanks.
-<P> 
-2015-10-10: Snakes and Ladders: <a href="fisl3.html">Finnish</a> translation of Snakes and Ladders done by OH7QR. Thanks.
-<P> 
-2015-10-10: September  <a href="sl1509.txt">Text</a> and <a href="sl1509.png"> MAP</a>  results of Snakes and Ladders.<P> 
-<P> 
-2015-09-25: Snakes and Ladders: <a href="sesl3.html">Swedish</a> translation of Snakes and Ladder done thanks to SM5KRI.  
-<P>
-2015-09-25: Snakes and Ladders: <a href="nlsl3.html">Dutch</a> translation of Snakes and Ladder done thanks to DM4RW.
-<P>
-2015-09-24: Snakes and Ladders: <a href="frsl3.html">French</a> translation of Snakes and Ladder done thanks to F5IYJ.
-<P>
-2015-09-24: Snakes and Ladders: <a href="slang.html">Translation Coordination</a> page made for volunteer translators of the rules.
-<P>
-2015-09-23: Snakes and Ladders: <a href="sl3.html">RULES for 2016</a> released
-<P>
-2015-09-19: August <a href="sl1508.txt">Text</a> and <a href="sl1508.png"> MAP</a> results of Snakes and Ladders.<P>
 <P>
 <a href="root.html"> Back </a> to EuCW Start Page <br>
 </body><a href="dp.pdf"><FONT size="-2">Privacy Policy</FONT></a></html>
