--- a/eucw.org/qtc.html
+++ b/eucw.org/qtc.html
@@ -11,7 +11,8 @@ EuCW Bulletins<BR>
 </H1>
 </CENTER>
 <P>
-List of available Bulletins edited by RM2D<P>
+List of available Bulletins edited by RM2D aka SM6LRR<P>
+<A HREF="qtc251.txt">2025Q1 from 2025-01-19 (ASCII TXT)</A><BR>
 <A HREF="qtc244.txt">2024Q4 from 2024-10-10 (ASCII TXT)</A><BR>
 <A HREF="qtc243.txt">2024Q3 from 2024-07-10 (ASCII TXT)</A><BR>
 <A HREF="qtc242.txt">2024Q2 from 2024-04-05 (ASCII TXT)</A><BR>
