--- a/eucw.org/sl.html
+++ b/eucw.org/sl.html
@@ -253,12 +253,8 @@ href=
 "sl2308.png">08</a> <a href="sl2309.png">09</a> <a href=
 "sl2310.png">10</a> <a href="sl2311.png">11</a> <a href=
 "sl2312.png">12</a>
-</B>
-
-<B>
-<h3>
-CURRENT RESULTS with <a href="sl3.html">Rules v.3</a> <BR>
-Reps 2024-I:
+<BR>
+V.3 Reps 2024-I:
 <a href="sl2401.txt">01</a>
 <a href="sl2402.txt">02</a>
 <a href="sl2403.txt">03</a>
@@ -267,7 +263,7 @@ Reps 2024-I:
 href=
 "sl2407.txt">07</a> <a href="sl2408.txt">08</a> <a href=
 "sl2409.txt">09</a> <a href="sl2410.txt">10</a> <a href=
-"sl2411.txt">11</a> <a href="https://eucw.org/sl2412.txt">12</a>
+"sl2411.txt">11</a> <a href="sl2412.txt">12</a>
 <b>Maps</b> 2024-I:
 <a href="sl2401.png">01</a>
 <a href="sl2402.png">02</a>
@@ -276,7 +272,29 @@ href=
 "sl2406.png">06</a> II: <a href="sl2407.png">07</a> <a href=
 "sl2408.png">08</a> <a href="sl2409.png">09</a> <a href=
 "sl2410.png">10</a> <a href="sl2411.png">11</a> <a href=
-"https://eucw.org/sl2412.png">12</a>
+"sl2412.png">12</a>
+<B>
+<h3>
+CURRENT RESULTS with <a href="sl3.html">Rules v.3</a> <BR>
+V.3 Reps 2025-I:
+<a href="sl2501.txt">01</a>
+<a href="sl2502.txt">02</a>
+<a href="https://eucw.org/sl2503.txt">03</a>
+<a href="https://eucw.org/sl2504.txt">04</a>
+<a href="https://eucw.org/sl2505.txt">05</a> <a href="https://eucw.org/sl2506.txt">06</a> II: <a
+href=
+"https://eucw.org/sl2507.txt">07</a> <a href="https://eucw.org/sl2508.txt">08</a> <a href=
+"https://eucw.org/sl2509.txt">09</a> <a href="https://eucw.org/sl2510.txt">10</a> <a href=
+"https://eucw.org/sl2511.txt">11</a> <a href="https://eucw.org/sl2512.txt">12</a>
+<b>Maps</b> 2025-I:
+<a href="sl2501.png">01</a>
+<a href="sl2502.png">02</a>
+<a href="https://eucw.org/sl2503.png">03</a>
+<a href="https://eucw.org/sl2504.png">04</a> <a href="https://eucw.org/sl2505.png">05</a> <a href=
+"https://eucw.org/sl2506.png">06</a> II: <a href="https://eucw.org/sl2507.png">07</a> <a href=
+"https://eucw.org/sl2508.png">08</a> <a href="https://eucw.org/sl2509.png">09</a> <a href=
+"https://eucw.org/sl2510.png">10</a> <a href="https://eucw.org/sl2511.png">11</a> <a href=
+"https://eucw.org/sl2512.png">12</a>
 </h3>
 </B>
 
