Fix spelling error

--- a/se-translation-status.html
+++ b/se-translation-status.html
@@ -10,7 +10,7 @@ translated: 2024-03-19
 </p>
 
 <p>
-  The order is firstly the not translated, and after that, softed
+  The order is firstly the not translated, and after that, sorted
   after date with the oldest first.
 </p>
 
