Markerad om inte längre existerande

--- a/se-eunov.html
+++ b/se-eunov.html
@@ -1,5 +1,5 @@
 ---
-translated: 2007-05-14
+translated: 2025-03-21
 originalhref: eunov.html
 title: EuCWs nybörjardiplom
 layout: default
@@ -14,6 +14,12 @@ layout: default
 <td align="right"><img src="imgs/eucwflag.gif" alt=""></td>
 </tr>
 </table>
+<p align="left"><strong>Sidan borttagen</strong><br>
+Någon gång före 2024-03-16 så togs den här sidan bort från
+ursprunssiten. Det här är alltså en översättning av en sidan som inte
+finns längre.
+</p>
+
 <p align="left"><strong>Tillgänglighet</strong><br>
 Detta diplom är tillgängligt för alla radioamatörer som,
 under de första 12 månaderna som han har en amatörradiolicens
