Fix kontaktman and chairman

--- a/se-officers.html
+++ b/se-officers.html
@@ -9,7 +9,7 @@ layout: default
 <td align="left"><img src="imgs/eucwflag.gif" alt=""></td>
 <td align="center">
 <h1>Det europeiska CW-förbundet<br>
-<font size="-1">hos AGCW-DLs EuCW-kontaktman</font></h1>
+<font size="-1">hos AGCW-DLs EuCW-kommunikationsfunktionär</font></h1>
 </td>
 <td align="right"><img src="imgs/agcwecm.gif" alt=""></td>
 </tr>
@@ -17,8 +17,8 @@ layout: default
 
 <p><b>EuCW-ordföranden:</b></p>
 
-<p>LZ1PJ, Ivan Ivanov, PO Box 15, BG-1324 Sofia<br>
-E-mail:...lz1pj (at-symbol) qsl.net...</p>
+<p>RM2D, Mats, <a HREF="chairman.mp3">Emailadress</a>
+</p>
 
 <p><b>Övriga EuCW-funktionärer:</b></p>
 
@@ -31,8 +31,7 @@ E-mail:...joe (at-symbol) dk7vw.de...</p>
 
 <p><a href="se-euskd.html">EuCW Midsummer Straight Key Day
 (EuCWs midsommarhandpumpsdag - SKD)</a>
-tävlingsledare:<br>
-SM0OY, Lars Nordgren, Lindvägen 19, S-19270 Sollentuna
+<a HREF="http://www.scag.se">Se SCAG-hemsidan.</a>
 </p>
 
 <p><a href="se-euqrs.html">EuCW QRS Party (EuCWs QRS-party)</a>
@@ -46,17 +45,13 @@ F6CEL, Ghislain Barbason, 5 rue de l'Ecluse, F-02190 Pignicourt, <br>
 Email:..f6cel (ay-symbol) wanadoo.fr..
 </p>
 
-<p><a href="se-eunov.html">EuCW Novice Award (EuCWs nybörjardiplom)</a>
-funktionär:<br>
-G8PG, Gus Taylor, 37 Pickerill Rd, Greasby, Merseyside CH39
-3ND.</p>
 
 
-<p><a href="se-eucw.html">EuCW-kontaktmän</a>.
-EuCW-kontaktmän (ECM)
+<p><a href="se-eucw.html">EuCW-kommunikationsfunktionärer</a>.
+EuCW-kommunikationsfunktionär (European Communications Managers ECM)
 representerar sina medlemsklubbar i EuCW.</p> 
 
-<p><a href="se-liaison.html">Kontaktmän</a>.
+<p><a href="se-liaison.html">Kontaktpersoner</a>.
 För att säkerställa vänskaplinga förbindelser
 som EuCW har med sina associerade transatlantiska klubbar.</p> 
 
