--- a/se-eunov.html
+++ b/se-eunov.html
@@ -16,7 +16,7 @@ layout: default
 </table>
 <p align="left"><strong>Sidan borttagen</strong><br>
 Någon gång före 2024-03-16 så togs den här sidan bort från
-ursprunssiten. Det här är alltså en översättning av en sidan som inte
+ursprungssiten. Det här är alltså en översättning av en sidan som inte
 finns längre.
 </p>
 
