Upload how it looks like 2025-07-22

--- a/eucw.org/essex.html
+++ b/eucw.org/essex.html
@@ -3,7 +3,7 @@
 
 <P><img src="essexkey.jpg" ALT="" align=left></P>
 </CENTER><P ALIGN=LEFT>
-<A HREF="http://www.essexcw.org.uk">
+<A HREF="https://www.essexcw.uk">
 <b> Essex CW Club:</b></A> 
 <BR>
 CW club from the UK. The home page of the clubs writes:
