--- a/eucw.org/euqrs.html
+++ b/eucw.org/euqrs.html
@@ -68,10 +68,10 @@ execute this right please state this in your log, too.</p>
 Sunday in April.</p>
 <pre>
     Examples:
-    2024: April 29, 00:00 UTC thru May 3, 23:59 UTC
     2025: April 28, 00:00 UTC thru May 2, 23:59 UTC
     2026: April 27, 00:00 UTC thru May 1, 23:59 UTC
     2027: April 26, 00:00 UTC thru April 30, 23:59 UTC
+    2028: April 24, 00:00 UTC thru April 28, 23:59 UTC
 </pre>
 <h3>MODE</h3>
 CW/A1A (No machine decoders allowed)
@@ -170,11 +170,11 @@ wx of the other stn</p>
 <p>LOG SUBMISSION depends on your logging style. One of three cases
 apply.</p>
 <pre>
-    I) You master log is created by a computer.
+    I) You log is in ADIF format.
        <a href="euqrsi.html">Click here for example log I</a>
-    II) You are logging on paper but you have Internet access.  
+    II) Your log is a simple list in ASCII text (csv) 
        <a href="euqrsii.html">Click here for example log II</a>
-    III) Paper logging and log submission on paper.
+    III) Your log is on paper (email a picture/scan) 
        <a href="euqrsiii.html">Click here for example log III</a>
 </pre>
 <p>I) Users of logging software export their log as ADIF files
@@ -262,7 +262,7 @@ rules.</p>
 <a href="euqrs18.html">2018</a> <a href="euqrs19.html">2019</a>
 <a href="euqrs20.html">2020</a> <a href="euqrs21.html">2021</a>
 <a href="euqrs22.html">2022</a> <a href="euqrs23.html">2023</a> 
-<a href="euqrs24.html">2024</a>
+<a href="euqrs24.html">2024</a> <a href="euqrs25.html">2025</a>
 </p>
 <P>
 The QRS Week is sponsored and organized by AGCW-DL.
