--- a/eucw.org/index.html
+++ b/eucw.org/index.html
@@ -58,8 +58,8 @@ The European CW Association<BR>
 <FONT size="-2">Web space sponsored by AGCW</FONT><BR></H1>
 <!-- BEGINNEWS -->
 <h3><hr><br>
-2025-03-10 February <a href="sl2502.txt"> Text </a> and <a href="sl2502.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p><p><hr>
-2025-02-09 January <a href="sl2501.txt"> Text </a> and <a href="sl2501.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p><p><hr>
+2025-07-10 1st half year 2025 <a href="sl2506.txt"> Text </a> and <a href="sl2506.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p><p><hr>
+2025-06-09 May <a href="sl2505.txt"> Text </a> and <a href="sl2505.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p><p><hr>
 </h3>
 <!-- ENDNEWS -->
 <TABLE width="100%" border="0" cellpadding="2">
