--- a/eucw.org/news.html
+++ b/eucw.org/news.html
@@ -3,6 +3,11 @@
 <BR CLEAR=LEFT>
 <H1>News and Changes</H1>
 <P>
+2025-07-10 1st half year 2025 <a href="sl2506.txt"> Text </a> and <a href="sl2506.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
+2025-06-09 May <a href="sl2505.txt"> Text </a> and <a href="sl2505.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
+2025-06-01 QRS-Week results 2025 <a href="euqrs25.html">are out</a>.<p>
+2025-05-09 April <a href="sl2504.txt"> Text </a> and <a href="sl2504.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
+2025-04-09 March <a href="sl2503.txt"> Text </a> and <a href="sl2503.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
 2025-03-10 February <a href="sl2502.txt"> Text </a> and <a href="sl2502.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
 2025-02-09 January <a href="sl2501.txt"> Text </a> and <a href="sl2501.png"> Map </a>results of Snakes and Ladders <a href="slpx.png">(Activity map)</a>.<p>
 2025-01-19 New <a href="qtc251.txt">Bulletin</a> 2025Q1 from our chairman.<p>
