--- a/eucw.org/sl.html
+++ b/eucw.org/sl.html
@@ -279,9 +279,9 @@ CURRENT RESULTS with <a href="sl3.html">Rules v.3</a> <BR>
 V.3 Reps 2025-I:
 <a href="sl2501.txt">01</a>
 <a href="sl2502.txt">02</a>
-<a href="https://eucw.org/sl2503.txt">03</a>
-<a href="https://eucw.org/sl2504.txt">04</a>
-<a href="https://eucw.org/sl2505.txt">05</a> <a href="https://eucw.org/sl2506.txt">06</a> II: <a
+<a href="sl2503.txt">03</a>
+<a href="sl2504.txt">04</a>
+<a href="sl2505.txt">05</a> <a href="sl2506.txt">06</a> II: <a
 href=
 "https://eucw.org/sl2507.txt">07</a> <a href="https://eucw.org/sl2508.txt">08</a> <a href=
 "https://eucw.org/sl2509.txt">09</a> <a href="https://eucw.org/sl2510.txt">10</a> <a href=
@@ -289,9 +289,9 @@ href=
 <b>Maps</b> 2025-I:
 <a href="sl2501.png">01</a>
 <a href="sl2502.png">02</a>
-<a href="https://eucw.org/sl2503.png">03</a>
-<a href="https://eucw.org/sl2504.png">04</a> <a href="https://eucw.org/sl2505.png">05</a> <a href=
-"https://eucw.org/sl2506.png">06</a> II: <a href="https://eucw.org/sl2507.png">07</a> <a href=
+<a href="sl2503.png">03</a>
+<a href="sl2504.png">04</a> <a href="sl2505.png">05</a> <a href=
+"sl2506.png">06</a> II: <a href="https://eucw.org/sl2507.png">07</a> <a href=
 "https://eucw.org/sl2508.png">08</a> <a href="https://eucw.org/sl2509.png">09</a> <a href=
 "https://eucw.org/sl2510.png">10</a> <a href="https://eucw.org/sl2511.png">11</a> <a href=
 "https://eucw.org/sl2512.png">12</a>
