Updated to 2025-07-22-status.
Aded the Essex club since there were changes in that one.

--- a/se-eucw.html
+++ b/se-eucw.html
@@ -129,14 +129,21 @@ ECM: vakant<br>
 
 <hr>
 <p><b><img src="flags/uk.gif" align="left" alt="G:"><a href=
+"se-essex.html">ESSEX</a> (Storbritanien)</b></p>
+
+<p><b>ESSEX CW-klubb</b><br>
+Vanlig CW klubb<br>
+ECM: G0IBN, Andrew
+</p>
+
+<hr>
+<p><b><img src="flags/uk.gif" align="left" alt="G:"><a href=
 "se-fists.html">FISTS</a> (Storbritanien)</b></p>
 
 <p><b>FISTS CW Club - The International Morse Preservation
 Society</b><br>
 Vanlig CW klubb<br>
-ECM: M0BPT, Robert D. Walker, 125, Devereux Road, West Bromwich B70 6RQ,
-<br>
-E-mail:...M0BPT (at-symbol) blueyonder.co.uk...<br>
+ECM: G3ZOD, Graham
 </p>
 
 <hr>
