--- a/se-euqrs.html
+++ b/se-euqrs.html
@@ -1,5 +1,5 @@
 ---
-translated: 2024-07-07
+translated: 2025-07-23
 originalhref: euqrs.html
 title: EuCWs QRS-vecka
 layout: default
@@ -68,10 +68,10 @@ layout: default
   söndagen i april.</p>
 <pre>
     Dvs.
-    2024: 29e april, 00:00 UTC till 3e maj, 23:59 UTC
     2025: 28e april, 00:00 UTC till 2e maj, 23:59 UTC
     2026: 27e april, 00:00 UTC till 1e maj, 23:59 UTC
     2027: 26e april, 00:00 UTC till 30e april, 23:59 UTC
+    2028: 24e april, 00:00 UTC till 28e april, 23:59 UTC
 </pre>
 <h3>MODER</h3>
 <p>CW/A1A (Datorer som hjälper till att avkoda telegrafin är inte
@@ -180,11 +180,11 @@ stationerna.</p>
 <p>Hur du skickar in loggen beror på hur du loggar kontakterna.  Det
   finns tre möjliga fall.</p>
 <pre>
-    I) Din logg är skapad på datorn.
+    I) Din logg i ADIF-format.
        <a href="https://eucw.org/euqrsi.html">Här finns ett exempel för en sådan logg</a>
-    II) Din har loggat på papper men du har tillgång till Internet.
+    II) Din har är en enkel lista av ASCII text (csv)
        <a href="https://eucw.org/euqrsii.html">Här finns ett exempel för en sådan logg</a>
-    III) Logg på papper och loggen skickas in på papper.
+    III) Din logg är på papper och (maila en bild eller inscanning)
        <a href="https://eucw.org/euqrsiii.html">Här finns ett sådant exempel logg</a>
 </pre>
 
@@ -299,6 +299,7 @@ stationerna.</p>
 <a href="https://eucw.org/euqrs22.html">2022</a>
 <a href="https://eucw.org/euqrs23.html">2023</a> 
 <a href="https://eucw.org/euqrs24.html">2024</a> 
+<a href="https://eucw.org/euqrs25.html">2025</a> 
 </p>
 <p>
 EuCWs QRS-vecka sponsras och organiseras av AGCW-DL.
